--- a/proyectos/8M.md
+++ b/proyectos/8M.md
@@ -54,7 +54,7 @@ Elegí dos de los textos que leimos y pensá con tus compañeres ¿Qué obstácu
   - Porque:
 - Quien expresa mejor mi idea de libertad es:
   - Porque:
-La historia más desagradable es:
+- La historia más desagradable es:
   - Porque:
 - Si pudiera impedir una acción, impediría la de:
   - Porque:
