--- a/proyectos/8M.md
+++ b/proyectos/8M.md
@@ -50,7 +50,7 @@ Elegí dos de los textos que leimos y pensá con tus compañeres ¿Qué obstácu
   - Porque:
 - La actitud más admirable es la de:
   - Porque:
-- Quien parece haber sido más felíz es:
+- Quien parece haber sido más feliz es:
   - Porque:
 - Quien expresa mejor mi idea de libertad es:
   - Porque:
