--- a/proyectos/8M.md
+++ b/proyectos/8M.md
@@ -46,6 +46,10 @@ Elegí dos de los textos que leimos y pensá con tus compañeres ¿Qué obstácu
 
 ## Formulario
 
+Cada estudiante se bajará [este archivo](assets/formularioBiografias.odt) de la cajita pirata
+
+
+
 - Me resultó muy interesante la vida de:
   - Porque:
 - La actitud más admirable es la de:
