--- a/proyectos/8M.md
+++ b/proyectos/8M.md
@@ -26,7 +26,7 @@ Vamos a pensar en:
 - ¿Qué se detiene si paran las mujeres?
 
 
-## lectura por parte del maesrtro de "Cuentos de buenas noches para niñas rebeldes"
+## lectura por parte del maestro de "Cuentos de buenas noches para niñas rebeldes"
 
 - ADA LOVELACE: MATEMÁTICA
 - ALFONSINA STRADA: CICLISTA
