--- a/recursos/8M.md
+++ b/recursos/8M.md
@@ -1,4 +1,4 @@
-# Recursos para biografías
+# Recursos para Biografías
 
 - [Formulario de Biografías](/assets/formularioBiografias.odt)
 - [Cuentos de buenas noches para niñas rebeldes](/assets/CuentosDeBuenasRebeldes.epub)
