--- a/recursos/8M.md
+++ b/recursos/8M.md
@@ -1,4 +1,4 @@
 # Recursos para Biografías
 
 - [Formulario de Biografías](/assets/formularioBiografias.odt)
-- [Cuentos de buenas noches para niñas rebeldes](/assets/CuentosDeBuenasRebeldes.epub)
+- [Cuentos de buenas noches para niñas rebeldes](https://www.dropbox.com/s/25ajbaz5ajmydlt/CuentosDeBuenasRebeldes.epub?dl=1)
